[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokenizer"

[features]
default = []
no-entrypoint = []

[dependencies]
pinocchio = { version = "0.10.2", features = ["cpi"] }
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
pinocchio-associated-token-account = "0.3.0"
pinocchio-log = "0.5.1"
p-core = { path = "../../sdks/p-core" }
p-gov = { path = "../../sdks/p-gov" }
five8 = "0.1"
five8_const = "0.1"
solana-address = { version = "2.2.0", features = ["curve25519"] }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]