[package]
name = "p-pyth"
version = "0.1.0"
edition = "2021"
description = "Minimal pinocchio-compatible Pyth price feed reader"
license = "MIT"

[lib]
crate-type = ["lib"]

[features]
default = []
no-panic-handler = []

[dependencies]
pinocchio = "0.10.2"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-log = "0.5.1"
